--- a/LZW_ARC/LZW_ARC/LZW_ARC.csproj
+++ b/LZW_ARC/LZW_ARC/LZW_ARC.csproj
@@ -46,16 +46,16 @@
   <ItemGroup>
     <Compile Include="Coder.cs" />
     <Compile Include="Decoder.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Form1Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form1Main.Designer.cs">
+      <DependentUpon>Form1Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Form1Main.resx">
+      <DependentUpon>Form1Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
